<resources>
    <string name="app_name">Snizl</string>
    <string name="facebook_app_id">1502512339984910</string>

    <string name="str_navigation_drawer_open">open</string>
    <string name="str_navigation_drawer_close">close</string>

    <string name="set">Set</string>
    <string name="yes">Yes</string>
    <string name="deal">Deal</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="claim">Claim</string>
    <string name="phone">Phone</string>
    <string name="range">Range</string>
    <string name="deals">Deals</string>
    <string name="title">Title</string>
    <string name="follow">Follow</string>
    <string name="select">Select</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="cont">Continue</string>
    <string name="custom">Custom</string>
    <string name="dismiss">Dismiss</string>
    <string name="log_out">Log Out</string>
    <string name="website">Website</string>
    <string name="instore">Instore</string>
    <string name="address">Address</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="home_hub">Home Hub</string>
    <string name="telephone">Telephone</string>
    <string name="following">Following</string>
    <string name="city_town">City/Town</string>
    <string name="last_name">Last Name</string>
    <string name="my_wallet">My Wallet</string>
    <string name="around_me">Around Me</string>
    <string name="deal_times">Deal Times</string>
    <string name="first_name">First Name</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="my_settings">My Settings</string>
    <string name="preferences">Preferences</string>
    <string name="get_started">Get Started</string>
    <string name="description">Description</string>
    <string name="as_home_hub">as Home Hub?</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="adjust_range">Adjust Range</string>
    <string name="about_deal">About the Deal</string>
    <string name="introduction">Introduction</string>
    <string name="record_video">Record Video</string>
    <string name="save_wallet">Save to Wallet</string>
    <string name="capture_image">Capture Image</string>
    <string name="feed_settings">Feed Settings</string>
    <string name="email_address">Email Address</string>
    <string name="visit_website">Visit Website</string>
    <string name="website_action_hint">Website URL</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="claim_instore_title">How to Claim</string>
    <string name="this_is_optional">This is optional</string>
    <string name="no_results_found">No Results Found</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="feed_preferences">Feed Preferences</string>
    <string name="phone_action_hint">Telephone Number</string>
    <string name="home_hub_title">Select your home hub</string>
    <string name="upload_media">Upload Photos or Videos</string>
    <string name="claim_title">Click on option to claim</string>
    <string name="create_new_account">Create new account</string>
    <string name="instore_action_hint">How to claim in store</string>
    <string name="dialog_range_title">Select your feed range</string>
    <string name="choose_media_title">Choose an Image or Video</string>
    <string name="claim_instore_message">Mention Snizl instore</string>
    <string name="with_existing_account">With existing account</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="add_action_title_deal">How to claim your Deal</string>
    <string name="terms_conditions_second">Terms and Conditions</string>
    <string name="forgot_password_title">Forgotten your password?</string>
    <string name="custom_action_hint">Description for Custom Claim</string>
    <string name="select_hub_title">Or select your Home Hub below:</string>
    <string name="home_hub_description">Choose your home hub location</string>
    <string name="select_from_snizl_gallery">Select from Snizl Gallery</string>
    <string name="preferences_description">Choose your feed preferences</string>
    <string name="no_wallet">Once you\'ve saved a post, it\'ll show here.</string>
    <string name="choose_business_title">Choose which business to post from</string>
    <string name="terms_conditions_first">By signing up to Snizl you agree to our</string>
    <string name="login_with"><b>Login</b> or <b>Register</b> with \nFacebook or Snizl</string>
    <string name="add_action_title_promotion">Add a custom action to your Promotion(optional)</string>
    <string name="dialog_range_description">Adjust the slider to your preferred distance. (Miles)</string>
    <string name="claim_instore_description">Show this voucher at the point of purchase to claim the offer</string>
    <string name="forgot_password_content">No problem, just head to the Snizl website and fill in the password reset form.</string>
    <string name="set_home_hub_description">We have detected your current location, would you like to set this as your Home Hub</string>
    <string name="choose_media_description">You can capture a new image or video with your device camera or select from your documents.</string>
    <string name="choose_business_description">You have muliple businesses on Snizl, please choose which you would like to make the post from.</string>
    <string name="add_action_description_deal">This is where you instruct the customer on how to claim your offer or deal by either \'Instore\', \'Phone\', \'Website\' or \'Custom Action\'.</string>
    <string name="add_action_description_promotion">This is where you may give the customer an action to take on your promotion. These include \'Phone\', \'Website\', \'Instore\' or \'Custom\'.</string>
    <string name="sign_up_description">If you\'re a business owner you can and your business to Snizl by logging in again via a web browser at www.snizl.com and going to Manager Account section</string>


    <!--Error-->
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_email">Email address is not in a valid format</string>
    <string name="no_internet_connection">Please check your internet connection status</string>

</resources>
