<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="@dimen/font_size_20"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/forgot_password_content"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/colorGrayDark"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_visit_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/size_36"
        android:layout_gravity="end"
        android:text="@string/visit_website"
        android:theme="@style/AppTheme.Button.Flat"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>

