<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_16"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="@color/colorGrayDark"
        android:textSize="@dimen/font_size_16"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="0dp"
        android:drawableLeft="@drawable/ic_upload"
        android:drawableStart="@drawable/ic_upload"
        android:drawablePadding="@dimen/size_32"
        android:text="@string/upload_media"
        android:textColor="@color/colorGrayDark"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Button.Flat"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="0dp"
        android:drawableLeft="@drawable/ic_camera_gray"
        android:drawableStart="@drawable/ic_camera_gray"
        android:drawablePadding="@dimen/size_32"
        android:text="@string/capture_image"
        android:textColor="@color/colorGrayDark"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Button.Flat"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="0dp"
        android:drawableLeft="@drawable/ic_video_gray"
        android:drawableStart="@drawable/ic_video_gray"
        android:drawablePadding="@dimen/size_32"
        android:text="@string/record_video"
        android:textColor="@color/colorGrayDark"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Button.Flat"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="0dp"
        android:drawableLeft="@drawable/ic_snizl_gray"
        android:drawableStart="@drawable/ic_snizl_gray"
        android:drawablePadding="@dimen/size_32"
        android:text="@string/select_from_snizl_gallery"
        android:textColor="@color/colorGrayDark"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Button.Flat"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

</LinearLayout>