<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".views.user.Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_08"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16"
            android:src="@drawable/ic_apply"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        android:text="@string/profile_settings"
        android:textColor="@color/colorButtonNormal"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AppTheme.HintText"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:theme="@style/AppTheme.EditText.Light"/>

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="@dimen/size_16"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AppTheme.HintText"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:theme="@style/AppTheme.EditText.Light"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        style="@style/AppTheme.HintText"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:theme="@style/AppTheme.EditText.Light"/>

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        style="@style/AppTheme.HintText"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:theme="@style/AppTheme.EditText.Light"/>

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayLight"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        android:text="@string/feed_settings"
        android:textColor="@color/colorButtonNormal"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/preferences_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_08"
            android:text="@string/preferences"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences_description"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_hub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_08"
            android:text="@string/home_hub"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_hub_description"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"/>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>
